src/main/default/objects/aforza__Audit_Asset__c/fields/AddCallToYourCoverageAndBaseline__c.field-meta.xml
<CustomField>
    <fullName>AddCallToYourCoverageAndBaseline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Productivity Audit</description>
    <inlineHelpText>Productivity Audit</inlineHelpText>
    <label>Add call to your coverage and baseline?</label>
    <type>Checkbox</type>
</CustomField>