src/main/default/objects/aforza__Audit_Asset__c/fields/BarrFamilyAllSkus__c.field-meta.xml
<CustomField>
    <fullName>BarrFamilyAllSkus__c</fullName>
    <description>Productivity Audit</description>
    <inlineHelpText>Productivity Audit</inlineHelpText>
    <label>Barr Family - All SKU&apos;s</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>