src/main/default/objects/aforza__Audit_Asset__c/fields/BuiltDisplay__c.field-meta.xml
<CustomField>
    <fullName>BuiltDisplay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Built a Display</label>
    <type>Checkbox</type>
</CustomField>