src/main/default/objects/aforza__Audit_Asset__c/fields/FranchiseSnappleSanBenBundaberg__c.field-meta.xml
<CustomField>
    <fullName>FranchiseSnappleSanBenBundaberg__c</fullName>
    <description>Productivity Audit</description>
    <inlineHelpText>Productivity Audit</inlineHelpText>
    <label>Franchise - Snapple, San Ben, Bundaberg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>