src/main/default/objects/aforza__Audit_Asset__c/fields/InCallProductivity__c.field-meta.xml
<CustomField>
    <fullName>InCallProductivity__c</fullName>
    <description>Productivity Audit</description>
    <inlineHelpText>Productivity Audit</inlineHelpText>
    <label>In Call Productivity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>