src/main/default/objects/aforza__Audit_Asset__c/fields/NoCasesOpenedMerchandised__c.field-meta.xml
<CustomField>
    <fullName>NoCasesOpenedMerchandised__c</fullName>
    <description>Call Audit</description>
    <inlineHelpText>Call Audit</inlineHelpText>
    <label>No: cases opened &amp; merchandised</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>