src/main/default/objects/aforza__Audit_Asset__c/fields/NoOfCompetitorSoftDrinkPosInSitu__c.field-meta.xml
<CustomField>
    <fullName>NoOfCompetitorSoftDrinkPosInSitu__c</fullName>
    <description>Productivity Audit</description>
    <inlineHelpText>Productivity Audit</inlineHelpText>
    <label>No: of Competitor Soft Drink POS in Situ</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>