src/main/default/objects/aforza__Audit_Asset__c/fields/NumberOfAgBarrPosAreInSitu__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAgBarrPosAreInSitu__c</fullName>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Number of AG Barr POS are In-Situ?</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>