src/main/default/objects/aforza__Audit_Asset__c/fields/OtherBarrProducts__c.field-meta.xml
<CustomField>
    <fullName>OtherBarrProducts__c</fullName>
    <description>Productivity</description>
    <inlineHelpText>Productivity</inlineHelpText>
    <label>Other Barr Products</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>