src/main/default/objects/aforza__Audit_Asset__c/fields/PerfectScoreProduct__c.field-meta.xml
<CustomField>
    <fullName>PerfectScoreProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Perfect Score Product</label>
    <type>Checkbox</type>
</CustomField>