src/main/default/objects/aforza__Audit_Asset__c/fields/PerfectScoreRate__c.field-meta.xml
<CustomField>
    <fullName>PerfectScoreRate__c</fullName>
    <label>Perfect Score Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>