src/main/default/objects/aforza__Audit_Asset__c/fields/PerfectScoreWeight__c.field-meta.xml
<CustomField>
    <fullName>PerfectScoreWeight__c</fullName>
    <label>Perfect Score Weight</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>