src/main/default/objects/aforza__Audit_Asset__c/fields/PerfectStoreMet__c.field-meta.xml
<CustomField>
    <fullName>PerfectStoreMet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the perfect store condition is met</description>
    <inlineHelpText>Indicates if the perfect store condition is met</inlineHelpText>
    <label>Perfect Store Met?</label>
    <type>Checkbox</type>
</CustomField>