src/main/default/objects/aforza__Audit_Asset__c/fields/PresentedAnotherMissingBrand__c.field-meta.xml
<CustomField>
    <fullName>PresentedAnotherMissingBrand__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Presented another missing brand</label>
    <type>Checkbox</type>
</CustomField>