src/main/default/objects/aforza__Audit_Asset__c/fields/PresentedPriorityBrand1__c.field-meta.xml
<CustomField>
    <fullName>PresentedPriorityBrand1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Presented Priority Brand 1</label>
    <type>Checkbox</type>
</CustomField>