src/main/default/objects/aforza__Audit_Asset__c/fields/PresentedPriorityBrand2__c.field-meta.xml
<CustomField>
    <fullName>PresentedPriorityBrand2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Presented Priority Brand 2</label>
    <type>Checkbox</type>
</CustomField>