src/main/default/objects/aforza__Audit_Asset__c/fields/PS_Product_England__c.field-meta.xml
<CustomField>
    <fullName>PS_Product_England__c</fullName>
    <formula>aforza__Outlet_Asset__r.PS_Product_England__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Product England</label>
    <type>Checkbox</type>
</CustomField>