src/main/default/objects/aforza__Audit_Asset__c/fields/PS_Weight_England__c.field-meta.xml
<CustomField>
    <fullName>PS_Weight_England__c</fullName>
    <formula>aforza__Outlet_Asset__r.PS_Weight_England__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Weight England</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>