src/main/default/objects/aforza__Audit_Asset__c/fields/PsProductEngland__c.field-meta.xml
<CustomField>
    <fullName>PsProductEngland__c</fullName>
    <formula>aforza__Outlet_Asset__r.PsProductEngland__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Product England</label>
    <type>Checkbox</type>
</CustomField>