src/main/default/objects/aforza__Audit_Asset__c/fields/PsProductScotland__c.field-meta.xml
<CustomField>
    <fullName>PsProductScotland__c</fullName>
    <formula>aforza__Outlet_Asset__r.PsProductScotland__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Product Scotland</label>
    <type>Checkbox</type>
</CustomField>