src/main/default/objects/aforza__Audit_Asset__c/fields/PsRateEngland__c.field-meta.xml
<CustomField>
    <fullName>PsRateEngland__c</fullName>
    <formula>aforza__Outlet_Asset__r.PsRateEngland__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PS Rate England</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>