src/main/default/objects/aforza__Audit_Asset__c/fields/RubiconFamilyAllSkusCount__c.field-meta.xml
<CustomField>
    <fullName>RubiconFamilyAllSkusCount__c</fullName>
    <description>Call Audit</description>
    <inlineHelpText>Call Audit</inlineHelpText>
    <label>Rubicon Family - All SKU&apos;s Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>