src/main/default/objects/aforza__Audit_Asset__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <formula>IF(PsProductScotland__c = true, PsRateScotland__c * PsWeightScotland__c, IF(PsProductEngland__c = true, PsRateEngland__c * PsWeightEngland__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>