src/main/default/objects/aforza__Audit_Asset__c/fields/SoldStockFromCar__c.field-meta.xml
<CustomField>
    <fullName>SoldStockFromCar__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketing Audit</description>
    <inlineHelpText>Marketing Audit</inlineHelpText>
    <label>Sold Stock from Car</label>
    <type>Checkbox</type>
</CustomField>