src/main/default/objects/aforza__Audit_Asset__c/fields/SunExoticFamilyAllBrands__c.field-meta.xml
<CustomField>
    <fullName>SunExoticFamilyAllBrands__c</fullName>
    <description>Productivity Audit</description>
    <inlineHelpText>Productivity Audit</inlineHelpText>
    <label>Sun Exotic Family - All Brands</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>